# 3D-Molecule-Visualizer

./: CMakeLists.txt  README.md
Dependencies/: stb.cpp
res/: periodic_table.json
res/molecules/: 15-mer.mol  Acid blue 90.mol  Basketane.mol  Betulin.mol  Bicalutamide.mol  Buckminsterfullerene.mol  Casodex.mol  Clathrin-IN-1.mol  Coronene.mol  Cytidine 5'-triphosphate.mol  Disodium salt.mol  Fluocinolone Acetonide.mol  Guanosine triphosphate.mol  H-89.mol  L-Tyrosyl.mol  MIFEPRISTONE.mol  Maitotoxin.mol  Megaphone.mol  Nicotinamide adenine dinucleotide.mol  Nutlin-3.mol  Octanitrocubane.mol  PC.mol  Sodium stearate.mol  Zidovudine.mol  cholesterol.mol  cyclic di-AMP.mol  macrocycle.mol  sucrose.mol  triglyceride.mol
res/shaders/: phong.glsl  skybox.glsl
src/: Atom.cpp  Atom.h  Bond.cpp  Bond.h  Molecule.cpp  Molecule.h  Skybox.cpp  Skybox.h  TBCamera.cpp  TBCamera.h  main.cpp
